fix(public): fix vertical align

--- a/src/public/layouts/Main/components/PublicHelp/style/styles.sass
+++ b/src/public/layouts/Main/components/PublicHelp/style/styles.sass
@@ -3,6 +3,7 @@
 
 .help-teams
   @include flex-justify-between
+  align-items: center
   padding: 120px 0
 
   @media screen and (max-width: $md-max-width)
